--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "js": "^0.1.0",
     "nanoid": "^5.0.2",
     "prop-types": "^15.8.1",
+    "proptypes": "^1.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1"
